[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Extensions/PixelCageTransform/PathWithHandles.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/point.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/handle.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="PathWithHandles" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="InHandle" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="OutHandle" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="VisualLineOutline" type="Line2D" parent="."]
width = 1.5
default_color = Color( 0, 0, 0, 1 )

[node name="VisualLine" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="InHandleLine" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="OutHandleLine" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Point1" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Point2" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
